<resources>
    <string name="app_name">Covid 19 Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Covid 19 Tracker</string>
    <string name="nav_header_subtitle">Application to track the whereabouts of Covid patients.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sort_number">Sort by Number of Patients</string>
    <string name="action_sort_name">Sort by Name of Location</string>

    <string name="menu_locations_list">List of Locations</string>
    <string name="menu_locations">Places You\'ve Visited</string>
    <string name="menu_user_profile">User Profile</string>

    <string name="home_second">Home Second</string>

    <string name="locations_text">Locations</string>
    <string name="number_patients_text">Number of Patients</string>
    <string name="locations_beirut">Beirut</string>
    <string name="number_patients_beirut">6</string>
    <string name="locations_tripoli">Tripoli</string>
    <string name="number_patients_tripoli">5</string>
    <string name="locations_saida">Saida</string>
    <string name="number_patients_saida">4</string>
    <string name="locations_barja">Barja</string>
    <string name="number_patients_barja">7</string>
    <string name="locations_jbeil">Jbeil</string>
    <string name="number_patients_jbeil">3</string>
    <string name="covid_resources"><a href="https://www.moph.gov.lb/en/Pages/2/24870/novel-coronavirus-2019-">https://www.moph.gov.lb/en/Pages/2/24870/novel-coronavirus-2019-</a></string>
</resources>
